# node-api-orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  main.py
app/api/v1/: endpoints.py
app/core/: dag.py  exceptions.py
app/models/: orm.py
app/repositories/: run.py
app/schemas/: workflow.py
app/services/: workflow.py
app/workers/: celery_app.py  executors.py  tasks.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: HistoryPanel.tsx  NodeConfigPanel.tsx  RunStatusPanel.tsx  Sidebar.tsx  TopBar.tsx  WorkflowBuilder.tsx
frontend/src/components/nodes/: WorkflowNode.tsx
frontend/src/constants/: nodeTypes.ts
frontend/src/hooks/: useRunPoller.ts  useTheme.ts
frontend/src/store/: workflowStore.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_api.py  test_dag.py
